--- a/.github/workflows/quarto-book-netlify.yaml
+++ b/.github/workflows/quarto-book-netlify.yaml
@@ -45,7 +45,7 @@ jobs:
           deploy-message:
             'Deploy from GHA: ${{ github.event.pull_request.title || github.event.head_commit.message }} (${{ github.sha }})'
           enable-pull-request-comment: true #  Comment on pull request
-          enable-commit-comment: true # Comment on GitHub commit
+          enable-commit-comment: false # Comment on GitHub commit
           enable-commit-status: true # GitHub commit status 
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
