--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,7 +11,7 @@ book:
     - index.qmd
     - part: "Inferential Stats"
       chapters:
-      - infer.qmd
+      - "stats/infer.qmd"
     - summary.qmd
     - references.qmd
 
