--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,6 +13,9 @@ book:
       chapters:
       - "stats/normality-test.qmd"
       - "stats/infer.qmd"
+    - part: "Compare group"
+      chapters:
+      - "stats/wilcoxon.qmd"
     - summary.qmd
     - references.qmd
 
