add multi-class perf mat

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -19,6 +19,9 @@ book:
     - part: "Diagnostic Study"
       chapters:
       - "stats/dta.qmd"
+    - part: "ML"
+      chapters: 
+      - "stats/perf-mat.qmd"
     - summary.qmd
     - references.qmd
 
