add compare & tune model

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -22,6 +22,8 @@ book:
     - part: "ML"
       chapters: 
       - "ml/tidymod-overview.qmd"
+      - "ml/compare-mod.qmd"
+      - "ml/tune-mod.qmd"
       - "stats/perf-mat.qmd"
     - summary.qmd
     - references.qmd
