--- a/_quarto.yml
+++ b/_quarto.yml
@@ -16,6 +16,9 @@ book:
     - part: "Compare group"
       chapters:
       - "stats/wilcoxon.qmd"
+    - part: "Sample Size"
+      chapters: 
+        - "stats/sam-size.qmd"
     - part: "Diagnostic Study"
       chapters:
       - "stats/dta.qmd"
