--- a/_quarto.yml
+++ b/_quarto.yml
@@ -29,6 +29,9 @@ book:
       - "stats/dta.qmd"
       - "stats/dta-yardstick.qmd"
       - "stats/perf-mat.qmd"
+    - part: "Correlation"
+      chapters:
+      - "stats/cor-icc.qmd"
     - part: "Feature Eng"
       chapters: 
       - "ml/bestglm.qmd"
